<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.welcome.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcomeText"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/welcome"
            app:layout_constraintBottom_toTopOf="@id/createFileButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createFileButton"
            style="@style/SecondaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_file"
            app:layout_constraintBottom_toTopOf="@id/orText"
            app:layout_constraintEnd_toEndOf="@id/welcomeText"
            app:layout_constraintStart_toStartOf="@id/welcomeText"
            app:layout_constraintTop_toBottomOf="@id/welcomeText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/orText"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            app:layout_constraintBottom_toTopOf="@id/selectFileButton"
            app:layout_constraintEnd_toEndOf="@id/welcomeText"
            app:layout_constraintStart_toStartOf="@id/welcomeText"
            app:layout_constraintTop_toBottomOf="@id/createFileButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectFileButton"
            style="@style/SecondaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/welcomeText"
            app:layout_constraintStart_toStartOf="@id/welcomeText"
            app:layout_constraintTop_toBottomOf="@id/orText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>