<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fileRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fileNameTitle"
            style="@style/TextHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/fileNameTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fileName"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:ellipsize="start"
            android:singleLine="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/fileNameTitle"
            app:layout_constraintEnd_toStartOf="@+id/selectFileButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/fileNameTitle"
            app:layout_constraintTop_toTopOf="@id/fileNameTitle"
            tools:text="really really really really long text really really really really long text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/select_file"
            app:layout_constraintBottom_toBottomOf="@id/fileNameTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fileNameTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/appearanceGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fileRow">

        <TextView
            android:id="@+id/appearanceTitle"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearanceTitle"
            android:textColor="?attr/colorSecondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editorTextSizeLabel"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/editorTextSizeSlider"
                android:text="@string/editor_text_size" />

            <TextView
                android:id="@+id/editorTextSizeValue"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="14" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editorTextSizeReset"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/reset"
                android:textColor="@color/secondary_text_button" />
        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/editorTextSizeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/editor_text_size"
            app:haloColor="?attr/colorControlHighlight"
            app:thumbColor="?attr/colorSecondary"
            app:tickVisible="false"
            app:trackColorActive="?attr/colorSecondary"
            app:trackColorInactive="?attr/colorControlNormal" />

        <TextView
            android:id="@+id/editorTextSizePreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:importantForAccessibility="no"
            android:padding="10dp"
            android:text="@string/editor_text_size_preview"
            android:textColor="?android:attr/textColorPrimary" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shortcutTitleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appearanceGroup">

        <TextView
            android:id="@+id/shortcutTitle"
            style="@style/TextHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/shortcutsTitle"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@id/shortcutMenuButton"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/shortcutMenuButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_more_vert_48"
            app:layout_constraintBottom_toBottomOf="@id/shortcutTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/shortcutTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/noShortcutsMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp"
        android:text="@string/no_shortcuts_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shortcutTitleGroup" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shortcutTitleGroup" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addShortcutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/add_a_shortcut"
        android:src="@drawable/ic_add_48"
        app:backgroundTint="?attr/colorPrimary"
        app:tint="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
