<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.LogFileSettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/logFileToolbar"
        style="@style/SettingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:navigationContentDescription="@string/navigate_up"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/log_file_settings_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fileNameTitle"
        style="@style/TextHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/fileNameTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsToolbarSpacer" />

    <View
        android:id="@+id/settingsToolbarSpacer"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@id/logFileToolbar" />

    <TextView
        android:id="@+id/fileName"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        android:ellipsize="start"
        android:singleLine="true"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fileNameTitle"
        tools:text="content://com.android.providers.media.documents/document/document%3A18" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/select_file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fileName" />

</androidx.constraintlayout.widget.ConstraintLayout>
