<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.log.LogFragment">

    <!-- The field scrolls itself: inside a ScrollView the two scrollers fought,
         and long logs could stop short of the top (#16). -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/todayLog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/write_something_to_save"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences"
        android:padding="10dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/shortcutTray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:alpha="0.6"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/settings"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_settings_48"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="@id/todayLog" />

    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:alpha="0.6"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/save"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_save_48"
        app:layout_constraintBottom_toBottomOf="@id/todayLog"
        app:layout_constraintEnd_toEndOf="@id/todayLog" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shortcutTray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todayLog"/>
</androidx.constraintlayout.widget.ConstraintLayout>

