<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp">

        <ImageButton
            android:id="@+id/btnCancelShortcut"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_close_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/addShortcutTitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/addShortcut"
            android:textColor="?attr/colorSecondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveShortcut"
            style="@style/SecondaryTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/previewText"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintBottom_toTopOf="@id/labelInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="hello" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/labelInputLayout"
                style="@style/SecondaryTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:hint="@string/addALabel"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/previewText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/labelInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    tools:text="really long text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/SecondaryTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/addText"
                app:errorEnabled="true"
                app:helperText="@string/addTextDescription"
                app:layout_constraintBottom_toTopOf="@id/sliderGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="5"
                    tools:text="really long text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/sliderGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="3dp"
                app:layout_constraintBottom_toTopOf="@+id/dateTimeGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout">

                <com.google.android.material.slider.Slider
                    android:id="@+id/cursorSlider"
                    style="@style/SecondarySlider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cursorIndexExplanation"
                    android:stepSize="1"
                    android:valueFrom="0" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cursorTitle"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/addCursor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dateTimeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sliderGroup">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/dateTimeCheckbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isDateTime" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
